[gd_scene load_steps=17 format=3 uid="uid://d10uyhdyi5780"]

[ext_resource type="Script" path="res://mini_nave.gd" id="1_3esgb"]
[ext_resource type="Texture2D" uid="uid://dnetxu8wuayo" path="res://assets/images/enemies/plantilla_enemigos_xa.png" id="1_ui8ul"]
[ext_resource type="Texture2D" uid="uid://b48k250fn80dh" path="res://assets/images/enemies/plantilla_enemigos_xa_red.png" id="3_hus1l"]
[ext_resource type="AudioStream" uid="uid://dqi8w8nukdtja" path="res://assets/audio/fx/win/enemy_death.ogg" id="3_odw2q"]
[ext_resource type="Texture2D" uid="uid://c7fceyaepd5wn" path="res://assets/images/elements/planilla_blasts_xa_512x512_24bits.png" id="4_xdgvf"]
[ext_resource type="Script" path="res://Area_nave.gd" id="5_1dgl1"]
[ext_resource type="AudioStream" uid="uid://dve2tsbkpud4c" path="res://assets/audio/fx/win/m_3.ogg" id="6_fjr2h"]
[ext_resource type="Script" path="res://Area2D2.gd" id="6_x0n2e"]

[sub_resource type="Gradient" id="Gradient_iind6"]
colors = PackedColorArray(1.2899e-05, 0.928233, 0.233596, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhi7r"]
gradient = SubResource("Gradient_iind6")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.05)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wco3"]

[sub_resource type="Animation" id="Animation_m6btt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p5ovf"]
resource_name = "explosion"
length = 0.400005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"destroy_area"
}, {
"args": [],
"method": &"destroy"
}]
}

[sub_resource type="Animation" id="Animation_687ha"]
resource_name = "hurt"
length = 0.400005
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"hurt_true"
}, {
"args": [],
"method": &"hurt_false"
}, {
"args": [],
"method": &"hurt_true"
}, {
"args": [],
"method": &"hurt_false"
}, {
"args": [],
"method": &"hurt_true"
}, {
"args": [],
"method": &"hurt_false"
}, {
"args": [],
"method": &"hurt_true"
}, {
"args": [],
"method": &"hurt_false"
}]
}

[sub_resource type="Animation" id="Animation_u1ayy"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d055p"]
_data = {
"RESET": SubResource("Animation_m6btt"),
"explosion": SubResource("Animation_p5ovf"),
"hurt": SubResource("Animation_687ha"),
"idle": SubResource("Animation_u1ayy")
}

[node name="mini_nave" type="Node2D" groups=["enemigo"]]
script = ExtResource("1_3esgb")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="fps" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-1.145, 0)
texture = ExtResource("1_ui8ul")
hframes = 8
vframes = 10
frame = 11

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(-1.145, 0)
texture = ExtResource("3_hus1l")
hframes = 8
vframes = 10
frame = 11

[node name="explosion" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.78, 2, 2, 1)
z_index = 2
position = Vector2(0, 9)
texture = ExtResource("4_xdgvf")
hframes = 7
frame = 1
region_enabled = true
region_rect = Rect2(0, 60, 420, 60)

[node name="PointLight2D" type="PointLight2D" parent="explosion"]
position = Vector2(0, 9)
texture = SubResource("GradientTexture2D_yhi7r")
texture_scale = 1.91

[node name="Area2D" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
script = ExtResource("5_1dgl1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.5)
scale = Vector2(2.23, 1)
shape = SubResource("RectangleShape2D_0wco3")

[node name="Area2D2" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
collision_layer = 2
collision_mask = 2
script = ExtResource("6_x0n2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 4.795)
scale = Vector2(2.94, 0.915)
shape = SubResource("RectangleShape2D_0wco3")

[node name="Area2D3" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
collision_layer = 2
collision_mask = 2
script = ExtResource("6_x0n2e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -13.06)
scale = Vector2(1.18, 1.09)
shape = SubResource("RectangleShape2D_0wco3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_odw2q")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_fjr2h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d055p")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_body_entered"]
